fixed overflow issue with navigation panel

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,14 @@
 }
 
 html, body{
-  width: 100%;
-  max-width: 100%;
+  /* max-width: 100%; */
   height: 100%;
   overflow-x: hidden;
   /* overflow-y: hidden; */
+}
+
+body{
+  position: relative;
 }
 
 
